--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ xcuserdata/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -97,6 +98,7 @@ build-iPhoneSimulator/
 ## Environment normalization:
 /.bundle/
 /vendor/bundle
+vendor/dlib-model/shape_predictor_68_face_landmarks.dat
 /lib/bundler/man/
 
 # for a library or gem, you might want to ignore these files since the code is
